--- a/packages.config
+++ b/packages.config
@@ -9,7 +9,9 @@
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
+  <package id="Microsoft.Web.WebView2" version="1.0.1210.30" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.28" targetFramework="net472" />
+  <package id="protobuf-net" version="2.4.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
