--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="AForge" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
+  <package id="BlazorDataGrid" version="5.0.0" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="5.15.4" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.14.0" targetFramework="net472" />
