--- a/Programa STPMJ.csproj
+++ b/Programa STPMJ.csproj
@@ -255,6 +255,9 @@
     <Compile Include="Funcoes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Socios.cs">
+      <DependentUpon>Socios.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Socios.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
