--- a/Programa STPMJ.csproj
+++ b/Programa STPMJ.csproj
@@ -31,7 +31,7 @@
     <UpdateUrl>https://raw.githubusercontent.com/LucasMoreira1/AgilitySTPMJ/master/published/</UpdateUrl>
     <MinimumRequiredVersion>1.0.0.5</MinimumRequiredVersion>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>10</ApplicationRevision>
+    <ApplicationRevision>11</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -221,6 +221,12 @@
     <Compile Include="FormCadastroConvenio.Designer.cs">
       <DependentUpon>FormCadastroConvenio.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCarteirinha.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCarteirinha.Designer.cs">
+      <DependentUpon>FormCarteirinha.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDependentes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -274,6 +280,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormCadastroConvenio.resx">
       <DependentUpon>FormCadastroConvenio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCarteirinha.resx">
+      <DependentUpon>FormCarteirinha.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormDependentes.resx">
       <DependentUpon>FormDependentes.cs</DependentUpon>
