--- a/Programa STPMJ.csproj
+++ b/Programa STPMJ.csproj
@@ -254,6 +254,12 @@
     <Compile Include="FormFichaCadastral.Designer.cs">
       <DependentUpon>FormFichaCadastral.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormLancamentos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormLancamentos.Designer.cs">
+      <DependentUpon>FormLancamentos.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -316,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormFichaCadastral.resx">
       <DependentUpon>FormFichaCadastral.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLancamentos.resx">
+      <DependentUpon>FormLancamentos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
