--- a/Programa STPMJ.csproj
+++ b/Programa STPMJ.csproj
@@ -295,6 +295,12 @@
     <Compile Include="FormPesquisaConvenio.Designer.cs">
       <DependentUpon>FormPesquisaConvenio.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPesquisarLancamentos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPesquisarLancamentos.Designer.cs">
+      <DependentUpon>FormPesquisarLancamentos.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormRelacaoAssociados.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -348,6 +354,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPesquisaConvenio.resx">
       <DependentUpon>FormPesquisaConvenio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPesquisarLancamentos.resx">
+      <DependentUpon>FormPesquisarLancamentos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormRelacaoAssociados.resx">
       <DependentUpon>FormRelacaoAssociados.cs</DependentUpon>
