--- a/App.config
+++ b/App.config
@@ -3,7 +3,11 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Programa_STPMJ.Properties.Settings.DB_Sindicato_STPMJConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;C:\Users\Lucas Moreira\Desktop\Agility\Projetos\Projetos\Projeto 5 - Sistema Sindicato\DB_Sindicato_STPMJ.accdb&quot;" providerName="System.Data.OleDb" />
+        <add name="Programa_STPMJ.Properties.Settings.DB_Sindicato_STPMJConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;C:\Users\Lucas Moreira\Desktop\
+			
+
+
+\Projetos\Projetos\Projeto 5 - Sistema Sindicato\DB_Sindicato_STPMJ.accdb&quot;" providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
